syntax = "proto3";
package docstore;

service Storage {
  rpc Store(StoreRequest) returns (Empty);
  rpc RetrieveMultiple(RetrieveMultipleRequest) returns (DataMap);
  rpc RetrieveBySchema(RetrieveBySchemaRequest) returns (DataMap);
}

message StoreRequest {
  string object_id = 1;
  string schema_id = 2;
  bytes data = 3;
}

message RetrieveMultipleRequest {
  repeated string object_ids = 1;
}

message RetrieveBySchemaRequest {
  string schema_id = 1;
}

message Empty {}

message DataMap {
  map<string, bytes> values = 1;
}
